--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -8,10 +8,15 @@
     font-size: 12px;
     text-transform: uppercase;
     color: #FFFFFF;
-    &__main {
+    &_main {
         width: 303px;
         height: 54px;
         font-size: 16px;
         margin-top: 65px;
+    }
+    &_submit {
+        width: 100%;
+        height: 58px;
+        font-size: 16px;
     }
 }
