--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -26,6 +26,7 @@
         color: #FFFFFF;
         &:hover {
             color: #FFFFFF;
+            text-decoration: underline;
         }
     }
     &__contacts {
