--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,4 +15,6 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/comment';
+@import 'blocks/footer';
 @import 'blocks/media'
