--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -3,6 +3,11 @@
     position: relative;
     &__map {
         height: 630px;
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
     }
     &__info {
         position: absolute;
